--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,7 +10,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: 
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Setup repo
